--- a/Practica 2.html
+++ b/Practica 2.html
@@ -101,6 +101,28 @@
                 <b><i><br>“Jose Antonio Urdiales
                     Aguilar
                     1668240”</b></i><br>
+                    <br>En esta practica 2 aprendí la diferencia entra la sintaxis de HTML5, HTML4 y XHTML1.0 sobre todo
+                    logre identificar las principales características de HTL5 que es el que mas uso ahorita y es con el
+                    que estoy más familiarizado en cuestión de etiquetas y con los nuevos elementos multimedia, el
+                    elemento canvas, formularios web. También aprendí nuevas etiquetas de CSS que es super
+                    importante para el diseño de paginas web para las animaciones, transiciones, fondos, bordes,
+                    colores RGBa, gradientes, sombreados y esquinas redondas.
+                <b><i><br>“Cesar Gerardo Fuentes Cantú 1804163”</b></i><br>
+                    <br> Durante la realización de ésta práctica aprendí el concepto de “canva” el cual no
+                    había escuchado o leído antes y termina siendo un recurso bastante útil en la
+                    programación de una página web, así como también se repasaron etiquetas
+                    principales en el lenguaje html para dar formato primario a una página, de las
+                    cuáles ya tenía conocimiento previo y no tuve problema al leer sobre ellas.
+                <b><i><br>“Patricio Contreras 1950379”</b></i><br>
+                    <br> Con esta práctica pude comprender de una manera muy completa y
+                    apreciar una sintaxis del lenguaje HTML que es fundamental para la
+                    codificación en programación de una pagina web
+                <b><i><br>“Melanie Scarlett Herrera Candela 1819508”</b></i><br>
+                    <br> En la práctica 2 vimos el tema de HTML5, en donde se nos pidió leer la lección 1 del curso de
+                    HTML5 de MSDN. Pude conocer a fondo la historia de HTML5, encontré algunas cosas que ya
+                    conocía con anterioridad del CSS, y aprendí nuevos elementos como &lt ;video & gt; &lt ;audio& gt; y & lt;canvas & gt;
+                    en donde se puede agregar multimedia, lo cual es muy útil saber.
+                <b><i><br>“Melanie Judith García Revillas 1894810”</b></i><br>
             </p>
 
             </p>
