--- a/Practica 6.html
+++ b/Practica 6.html
@@ -32,6 +32,11 @@ colores vivos para que se viera de una manera muy visual y entretenida. Concluyo
 <p class="nombre">Angel Patricio Contreras Bazaldúa – 1950379 </p> 
 <p> Durante la realización de ésta práctica se encargó elaborar una figura dinámica con el elemento Canvas, logrando hacer una figura desde 0 con los comandos y funciones que vienen integrados en html y css. Además sirve para resaltar algunos datos de mayor relevancia ante otros elementos, tales como los títulos y algunas excepciones como alguna gráfica en la cual se necesiten representar algunos números.</p>
  <script src="script.js"></script>
+<p class="nombre">Jose Antonio Urdiales Aguilar - 1668240 </p>
+<p> El nuevo elemento canvas nos ofrece una potencia desconocida hasta el momento en el desarrollo de páginas web, algunos frameworks 
+    JavaScript como ExtJS4 ya incorporan este elemento en sus rutinas de renderizado HTML. Ya hemos visto cuales son los problemas que se 
+    le imputan al elemento debido a su falta de accesibilidad, como con toda herramienta, debemos hacer un uso inteligente de ella 
+    e intentar no abusar y ser diligentes o convertiremos canvas en un nuevo elemento oscuro, inaccesible e insolidario como ciertos plugins existentes.</p>
 
 
 
