--- a/Practica 7.html
+++ b/Practica 7.html
@@ -51,7 +51,9 @@
            </h3><br> 
     
     <br> <h3> Jose Antonio Urdiales Aguilar 1668240 ITS </h3><br> 
-    <br>   <h3> La práctica fue un tanto "compleja" de realizar puesto que fue nuestro primer contacto con la funcionalidad Drag & Drop que fue implementado mediante el lenguaje JavaScript, de ésta manera se logró que la página web tomara una funcionalidad más interactiva con el usuario.
+    <br>   <h3> En esta actividad vimos la  introducción a el Drag and Drop con HTML5 vimos como crear nuestro propio sistema de Drag and Drop y múltiples ejemplo que evidencia el uso de los distintos eventos y varios casos de prueba de lo más útiles como el que permite obtener archivos desde el computador.
+
+Además vimos que el gran número de eventos que maneja no es un inconveniente sino todo lo contrario que permiten obtener datos en todo momento del estado tanto del elemento arrastrable como contenedor y personalizar estas acciones casi que a un 100%.
       
            </h3><br> 
 
