--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a href="Practica 5.html">Practica 5</a>&nbsp;
             <a href="Practica 6.html">Practica 6</a> &nbsp;
             <a href="Practica 7.html">Practica 7</a>
-            <a href="Pia.html">PIA</a>
+            <a href="Pia.html">Producto Integrador</a>
 
         </div>
 
